--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,7 +6,7 @@
   {{ hugo.Generator }}
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} - {{ .Site.Title }}{{ end }}</title>
 
@@ -25,6 +25,9 @@
   <link rel="stylesheet" href="{{ "css/theme.css" | absURL }}">
 </head>
 <body>
+  <header>
+    {{ block "heading" . }}{{ end }}
+  </header>
   <div>
     <!-- The content block. -->
     {{ block "content" . }}{{ end }}
