--- a/layouts/partials/posts.html
+++ b/layouts/partials/posts.html
@@ -1,11 +1,13 @@
-<div>
-  <h2 class="text-3xl font-bold mb-2">{{ .Key }}</h2>
-  <ol>
-    {{ range .Pages -}}
-    <li class="mb-6 md:flex md:flex-row">
-      <time class=" block md:flex-l-24" datetime="{{ .Date.Format "2006-01-02 15:04:05 MST" }}">{{ .Date.Format "Jan 02"}}</time>
-      <a class="text-lg md:ml-12" href="{{ .RelPermalink }}">{{ .Title }}</a>
-    </li>
-    {{- end }}
-  </ol>
+<div class="container">
+  <div class="menu">
+    <h2 class="title is-2 menu-label">{{ .Key }}</h2>
+    <ul class="menu-list">
+      {{ range .Pages -}}
+      <li>
+        <time datetime="{{ .Date.Format "2006-01-02 15:04:05 MST" }}">{{ .Date.Format "Jan 02"}}</time>
+        <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+      </li>
+      {{- end }}
+    </ul>
+  </div>
 </div>
