add timeline extension

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -23,12 +23,14 @@
   <!-- Stylesheets -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Arvo:400,700">
   <link rel="stylesheet" href="{{ "css/theme.css" | absURL }}">
+
+  <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
 <body>
-  <header>
+  <header class="section">
     {{ block "heading" . }}{{ end }}
   </header>
-  <div>
+  <div class="section">
     <!-- The content block. -->
     {{ block "content" . }}{{ end }}
   </div>
