--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,24 +1,22 @@
 {{ define "heading" }}
-<div>
+<div class="container">
   <!-- Title and Publication Date -->
-  <h1 class="text-4xl font-bold">{{ .Title }}</h1>
-  <time datetime="{{ .Date.Format "2006-01-02 15:04:05 MST" }}">{{ .Date.Format "02 Jan 2006" }}</time>
+  <h1 class="title">{{ .Title }}</h1>
+  <h2 class="subtitle">{{ .Date.Format "02 Jan 2006" }}</h2>
 
   <!-- Tags -->
   {{ with .Params.tags }}
-  <ol class="mt-4">
+  <div class="tags">
     {{ range . }}
-    <li class="inline-block">
-      <a class="border-none text-gray-800 text-xs bg-gray-400 hover:bg-gray-600 hover:text-white rounded-sm px-3 py-1" href="{{ "tags" | absURL }}/{{ . | urlize }}">{{ . }}</a>
-    </li>
+    <a class="tag" href="{{ "tags" | absURL }}/{{ . | urlize }}">{{ . }}</a>
     {{ end }}
-  </ol>
+  </div>
   {{ end }}
 </div>
 {{ end }}
 
 {{ define "content" }}
-<article class="mb-12">
+<div class="container">
   {{ .Content }}
-</article>
+</div>
 {{ end }}
