--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,18 +1,30 @@
 {{ define "heading" }}
-{{ if .Site.Params.Avatar }}
-<img class="hidden md:block w-20 rounded-full mr-6" src="{{ .Site.Params.Avatar | absURL }}" alt="{{ .Site.Params.Author }}">
-{{ end }}
-
-<div>
-  <h1 class="text-4xl font-bold">{{ .Site.Title }}</h1>
-  <p>{{ .Site.Params.tagline }}</p>
-</div>
+<article class="media">
+  <figure class="media-left">
+    {{ if .Site.Params.Avatar }}
+    <figure class="image is-128x128">
+      <img class="is-rounded" src="{{ .Site.Params.Avatar | absURL }}" alt="{{ .Site.Params.Author }}">
+    </figure>
+    {{ end }}
+  </figure>
+  <div class="media-content">
+    <h1 class="title">{{ .Site.Title }}</h1>
+    {{ if .Site.Params.GithubURL }}
+    <a class="button is-small" src="{{ .Site.Params.GithubURL | absURL }}">
+      <span class="icon is-small">
+        <i class="fab fa-github"></i>
+      </span>
+      <span>GitHub</span>
+    </a>
+    {{ end }}
+  </div>
+</article>
 {{ end }}
 
 {{ define "content" }}
-<section class="section">
+<div class="container">
   {{ range site.RegularPages.GroupByDate "2006" -}}
   {{ partial "posts.html" . }}
   {{ end }}
-</section>
+</div>
 {{ end }}
