--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -16,7 +16,7 @@
 {{ end }}
 
 {{ define "content" }}
-<div class="container">
+<div class="container markdown-body">
   {{ .Content }}
 </div>
 {{ end }}
