--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,7 @@
 {{ define "heading" }}
 <div class="container">
+  <a class="text-lg mb-8 inline-block" href="{{ .Site.BaseURL | relLangURL }}">&larr; {{ i18n "back_home" }}</a>
+
   <!-- Title and Publication Date -->
   <h1 class="title">{{ .Title }}</h1>
   <h2 class="subtitle">{{ .Date.Format "02 Jan 2006" }}</h2>
@@ -16,7 +18,7 @@
 {{ end }}
 
 {{ define "content" }}
-<div class="container markdown-body">
+<div class="markdown-body">
   {{ .Content }}
 </div>
 {{ end }}
