--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,31 +1,7 @@
 <!doctype html>
 <html lang="{{ .Site.Params.LanguageCode }}">
 
-<head>
-  <meta charset="utf-8">
-  {{ hugo.Generator }}
-
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <title>{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} - {{ .Site.Title }}{{ end }}</title>
-
-  <meta name="author" content="{{ .Site.Params.Author }}">
-  <meta name="description" content="{{ if .IsHome }}{{ .Site.Params.description }}{{ else }}{{ .Summary | plainify }}{{ end }}">
-
-  <!-- Translations -->
-  {{ if .IsTranslated }}
-  {{ range .Translations }}
-  <link rel="alternate" hreflang="{{ .Language.Lang }}" href="{{ .Permalink }}" title="{{ .Site.Title }}">
-  {{ end }}
-  {{ end }}
-
-  <!-- Stylesheets -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Arvo:400,700">
-  <link rel="stylesheet" href="{{ "css/theme.css" | absURL }}">
-
-  <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-</head>
+{{- partial "head.html" . -}}
 <body>
   <header class="section">
     {{ block "heading" . }}{{ end }}
