--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -1,3 +1,4 @@
+{{ define "content" }}
 <h2 class="title">{{ .Title }}</h2>
 {{ if eq .Title "Tags"}}
   {{ if lt 0 (len .Site.Taxonomies.tags) }}
@@ -25,4 +26,5 @@
     {{ end }}
   </div>
   {{ end }}
+{{ end }}
 {{ end }}
