--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -1,4 +1,5 @@
 {{ define "content" }}
+<a class="text-lg mb-8 inline-block" href="{{ .Site.BaseURL | relLangURL }}">&larr; {{ i18n "back_home" }}</a>
 <h2 class="title">{{ .Title }}</h2>
 {{ if eq .Title "Tags"}}
   {{ if lt 0 (len .Site.Taxonomies.tags) }}
