update datetime format

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -4,7 +4,7 @@
 
   <!-- Title and Publication Date -->
   <h1 class="title">{{ .Title }}</h1>
-  <h2 class="subtitle">{{ .Date.Format "02 Jan 2006" }}</h2>
+  <h2 class="subtitle">{{ .Date.Format "January 2, 2006" }}</h2>
 
   <!-- Tags -->
   {{ with .Params.tags }}
