--- a/layouts/partials/posts.html
+++ b/layouts/partials/posts.html
@@ -6,7 +6,7 @@
   <div class="timeline-item">
     <div class="timeline-marker"></div>
     <div class="timeline-content">
-      <p class="heading">{{ .Date.Format "Jan 02"}}</p>
+      <p class="heading">{{ .Date.Format "January 2, 2006"}}</p>
       <a href="{{ .RelPermalink }}">{{ .Title }}</a>
     </div>
   </div>
