--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -7783,7 +7783,8 @@ label.panel-block {
 .markdown-body ul {
   margin-bottom: 0;
   margin-top: 0;
-  padding-left: 0; }
+  padding-left: 0;
+  list-style: inherit; }
 
 .markdown-body ol ol,
 .markdown-body ul ol {
